--- a/src/app/features/profiles/employer/employer-dashboard/employer-dashboard.html
+++ b/src/app/features/profiles/employer/employer-dashboard/employer-dashboard.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" routerLink="/empDashboard"><i class="bi bi-grid-1x2-fill"></i> Dashboard</a>
                     <a class="nav-link" routerLink="/empProfile"><i class="bi bi-building"></i> Company Profile</a>
                     <a class="nav-link" routerLink="/empPostedJobs"><i class="bi bi-briefcase"></i> Posted Jobs</a>
-                    <a class="nav-link" routerLink="/"><i class="bi bi-file-earmark-text"></i> Applications</a>
+                    <a class="nav-link" routerLink="/appViewEmp"><i class="bi bi-file-earmark-text"></i> Applications</a>
                     <a class="nav-link" routerLink="/empAnalytics"><i class="bi bi-bar-chart"></i> Analytics</a>
                 </nav>
             </div>
